# heureka_productmatching

productmatching/: .dockerignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.auto_monitoring  Dockerfile.cache_upload  Dockerfile.initContainer  Dockerfile.matchapi_multi  Dockerfile.workflow  README.md  deployment.single.yaml.example  docker-compose.ci_tests.yaml  docker-compose.dexter_kube.yaml  docker-compose.local_kafka.yaml  docker-compose.tests.yaml  secrets.env.example
productmatching/SourcesPython/auto_monitoring/: alert.py  consequent_actions.py  main.py  pyproject.toml  settings.py
productmatching/Workflow/: clustering.py  hyperparameters.py  main.py  mct_transfer.py  pyproject.toml  register_model.py  utilities.py
productmatching/Workflow/charts/: Chart.yaml  values.yaml
productmatching/Workflow/charts/templates/: configmap.yaml  deployment.yaml
productmatching/Workflow/templates/: high.yaml  low.yaml  memory.yaml  micro.yaml
productmatching/Workflow/yamls/: production.yaml  secrets.yaml  stage.raw.yaml.example  stage.yaml.example
productmatching/init/: download.sh
productmatching/model_extras/: unit_checker.py  (+1 more)
productmatching/resources/candy/: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  docker-compose.build.yaml  docker-compose.image.yaml  docker-compose.kafka_gcp.yaml  docker-compose.kafka_kube.yaml  docker-compose.kafka_local.yaml  docker-compose.localdev.yaml  docker-compose.oc.yaml  docker-compose.yaml  pyproject.toml  secrets.env.example
productmatching/resources/candy/.gitlab/ci/: build.yml  extract.yml  production.yml  production_oc.yml  review.yml  review_oc.yml  stage.yml  stage_oc.yml  test.yml
productmatching/resources/candy/chart/: Chart.yaml  values.yaml  values_oc_prod.yaml  values_oc_stage.yaml
productmatching/resources/candy/chart/templates/: _helpers.tpl  configmap.yaml  deployment.extract.yaml  deployment.yaml  secret.yaml  service-monitor.yaml  service.yaml
productmatching/resources/candy/mock/: kafka_consume.py  kafka_consume_embeddings.py  kafka_produce.py  rredis.py  rredis_monolith.py
productmatching/resources/candy/resources/url-generator-routes/: README.md  routes.json
productmatching/resources/candy/src/candy/: config.py  logging.config.json  main.py  metrics.py  probes.py  utils.py
productmatching/resources/candy/src/candy/logic/: candy.py  matchapi.py
productmatching/resources/candy/src/candy/logic/implementation/: client.py  oc_client.py
productmatching/resources/candy/src/candy/logic/providers/: __init__.py  candidates_monitor.py  candidates_provider.py
productmatching/resources/candy/statistics/: extract.py  items.list  matching_rerun.py  run_test_matching.py
productmatching/resources/candy/tests/logic/: test_candy.py
(+129 files in other folders)
